--- a/css/Ahmed-ALahmed.css
+++ b/css/Ahmed-ALahmed.css
@@ -10,6 +10,8 @@ body {
 
 .navbar {
     background-color: #0e0e0e61;
+    width: -webkit-fill-available;
+
 }
 
 .navbar .navbar-nav .nav-link:hover {
